--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
   "devDependencies": {
     "gh-pages": "^6.3.0",
     "prettier": "^2.2.1"
-  }
+  },
+  "homepage": "https://marta-guimaraes.github.io/"
 }
